ajout nouvelle route getQrCodeWithDroneId
