# routes/routes.js
@@ -11,7 +11,7 @@ import { getRoles, getRole, addRole, updateRole, deleteRole } from '../controlle
 import { getUsers, getUser, addUser, deleteUser, updateUser } from '../controllers/userControllers.js'
 import { getCategory, getAllCategories, addCategory, deleteCategory, updateCategory } from '../controllers/categoryControllers.js'
 import { getDronesByCategory, getDrone, getAllDrones, addDrone, updateDrone, deleteDrone } from '../controllers/droneControllers.js'
-import { deleteQrCode, getQrCode, addQrCode, getAllQrCodes } from "../controllers/qrCodeController.js"
+import { deleteQrCode, getQrCode, addQrCode, getAllQrCodes, getQrCodeWithDroneId } from "../controllers/qrCodeController.js"
 import { getImages, getImage, addImage, deleteImage } from "../controllers/imageController.js"
 
 const auth = {
@@ -509,6 +509,25 @@ router
                 in: 'path', 
                 name: 'idQrCode', 
                 description: 'The ID of The QR Codes', 
+                required: true, 
+                type: 'string' 
+            }
+            #swagger.responses[200] = { description: 'OK' }
+            #swagger.responses[403] = { description: 'FORBIDDEN' }
+            #swagger.responses[404] = { description: 'NOT FOUND' }
+        */
+    )
+    .get('/qrcodes/drone/:idDrone', auth.jwt, catchErrors(getQrCodeWithDroneId)
+            /*
+            #swagger.tags = ['The QR Codes']
+            #swagger.description = 'Endpoint to get a QR Code for a specific drone.'
+            #swagger.security = [{
+                "bearerAuth": []
+            }]
+            #swagger.parameters[idDrone] = { 
+                in: 'path', 
+                name: 'idDrone', 
+                description: 'The id of the specific drone', 
                 required: true, 
                 type: 'string' 
             }
